# MIR-Challenge

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  Dockerfile.api  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  generation_service.py  main.py  mlflow_utils.py  models.py  prompt_service.py  server.py
app/routes/: generate_images.py  generate_text.py
app/templates/: aggregate_image_prompt.j2  aggregate_text_prompt.j2  extract_info_prompt.j2
dags/: load_data_dag.py
data/: population.csv  region.csv  travel_mode.csv  travel_motives.csv  trips.csv  urbanization_level.csv
dataset/: README.md  __init__.py  create_tables.sql  drop_all_tables.py  init_database.py  load_csv_to_postgres.py  setup_database.py
